<resources>
    <string name="app_name">Champion club -Balirmath</string>
    <string name="splash_screen_image">splash screen image</string>
    <string name="club_name">Champion club</string>
    <string name="club_adress">Balirmath</string>
    <string name="app_motive">Manage your club with us</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_hint">E-mail</string>
    <string name="placeholder">ex:xyz@gmail.com</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login_btn">Login</string>
    <string name="member">I want to a member ?</string>
    <string name="join_request">Request</string>
    <string name="placeholder_password">password</string>
    <string name="back_button">back button form</string>
    <string name="organise_event">Organise Event</string>
    <string name="members">Members</string>
    <string name="add_user">Add User</string>
    <string name="event">Events</string>
    <string name="note">Notice</string>
    <string name="donate">Donate</string>
    <string name="settings">Settings</string>
    <string name="active_events">Active Events</string>
    <string name="event_title">Blood Donation</string>
    <string name="organiser">Event Organiser :</string>
    <string name="organiser_name">Rajesh Bhadra</string>
    <string name="know_more">Know more</string>
    <string name="event_date_title">Event Date :</string>
    <string name="event_date">10 / 02 / 2023</string>
    <string name="club_chat">Club Chat</string>
    <string name="typing">Typing....</string>
    <string name="profile">Profle</string>
    <string name="user_name">User Name</string>
    <string name="chatting_edit_text">Enter new message...</string>
    <string name="sender_name">Rajesh Bhadra</string>
    <string name="reciver_message_id">Hello! I am Rajesh Bhadra</string>
    <string name="recive_time">12:30 pm</string>
    <string name="SenderMessage">Hello! I am Rajesh Bhadra</string>
    <string name="SenderTime">12:30 pm</string>
    <string name="back_btn">group chat back button</string>
    <string name="snd_message">send message image</string>
    <string name="club_wallet">Club Wallet</string>
    <string name="balance">000</string>
    <string name="donate_upi">UPI: 8388071823@paytm</string>
    <string name="pay_now">Pay Now</string>
    <string name="balance_history">Balance History</string>
    <string name="donateHistoryName">Rajesh Bhadra</string>
    <string name="donate_pay_amount">+ ₹250</string>
    <string name="monday_10_30_pm">Monday, 10:30 PM</string>
    <string name="eventPageName">Kali Pujo</string>
    <string name="date">Date: </string>
    <string name="organiserNameId">Organiser: Rajesh Bhadra</string>
    <string name="participate">Participate</string>
    <string name="all_member">All Participated Member</string>
    <string name="participator_name">Rajesh Bhadra</string>
    <string name="event_card">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="_12_03_23">12/03/23</string>
    <string name="create_event_name">Event Name</string>
    <string name="create_event_date">25-02-23</string>
    <string name="create_event_date_">Event Date:</string>
    <string name="create_organiser">Organiser</string>
    <string name="create">Create</string>
    <string name="name_event">Rajesh Bhadra</string>
    <string name="page_title_event">Event Card</string>
    <string name="name">Name</string>
    <string name="cancel">Finished Event</string>
    <string name="un_participate">un-participate</string>
    <string name="note_back_btn">Club Notice</string>
    <string name="clubNote">Notice Board</string>
    <string name="add_btn">add_btn</string>
    <string name="note_title">Kalipujo</string>
    <string name="note_author">Noticed from Rajesh Bhadra</string>
    <string name="delete_icon_dsc">delete icon</string>
    <string name="note_title_hard">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="noteContent">Note</string>
    <string name="cancel_btn">Canel</string>
    <string name="demo_content">This is demo text for android users</string>
    <string name="notice_date">Date: 20-03-23</string>
    <string name="notice_by">~ by Rajesh Bhadra</string>
    <string name="earn">Earn Money</string>
    <string name="all_members">All Members</string>
    <string name="email_id">rajeshbhadra62@gmail.com</string>
    <string name="user_email">useremail123@gmail.com</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_balance">00.00 Points</string>
    <string name="phoneNumber">+919775947315</string>
    <string name="NoPhoneNumber">Phone number is not available</string>
    <string name="privacy">Privacy and Security</string>
    <string name="lout">Logout</string>
    <string name="background_image">background image</string>
    <string name="profile_background">Cover Photo</string>
    <string name="profile_image">Profile Image</string>
    <string name="retry_btn">Retry Again</string>
    <string name="loading_name">Loading Name.....</string>
    <string name="loading_email">Loading email....</string>
    <string name="dayNightMode">Day Night</string>
</resources>