<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/deep_green">

        <androidx.cardview.widget.CardView
            android:id="@+id/knowMoreBtnId"
            android:layout_width="104dp"
            android:layout_height="27dp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <TextView
                style="@style/colorMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/exo2"
                android:text="@string/know_more"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo2"
            android:text="@string/event_date_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/knowMoreBtnId"
            app:layout_constraintEnd_toStartOf="@+id/eventDateId"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/eventDateId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/exo2"
            android:text="@string/event_date"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo2"
            android:text="@string/organiser"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/eventOrganiserNameId"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventTitleId" />

        <TextView
            android:id="@+id/eventOrganiserNameId"
            android:layout_width="90dp"
            android:layout_height="16dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/exo2"
            android:text="@string/organiser_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/eventTitleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo2"
            android:text="@string/event_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>