<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recive_message"
    android:maxWidth="@dimen/_250sdp"
    android:maxHeight="@dimen/_250sdp"
    android:minWidth="@dimen/_30sdp"
    android:minHeight="@dimen/_30sdp">

   <TextView
       android:id="@+id/ReciverNameId"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/sender_name"
       android:textColor="@color/green_deep_color"
       app:layout_constraintEnd_toEndOf="@+id/SenderMessageId"
       app:layout_constraintStart_toStartOf="@+id/guideline"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/SenderMessageId"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_2sdp"
       android:fontFamily="@font/exo2"
       android:inputType="textMultiLine"
       android:text="@string/reciver_message_id"
       android:textColor="@color/black"
       android:textSize="@dimen/_13sdp"
       app:layout_constraintBottom_toTopOf="@+id/reciverTimeId"
       app:layout_constraintEnd_toStartOf="@+id/guideline2"
       app:layout_constraintStart_toStartOf="@+id/guideline"
       app:layout_constraintTop_toBottomOf="@+id/ReciverNameId" />

   <TextView
       android:id="@+id/reciverTimeId"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="@dimen/_2sdp"
       android:layout_marginBottom="@dimen/_2sdp"
       android:text="@string/recive_time"
       android:textColor="@color/black"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_end="300dp" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_begin="300dp" />

</androidx.constraintlayout.widget.ConstraintLayout>