<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NoteSeeBtnId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:elevation="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardPreventCornerOverlap="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="@dimen/_46sdp">

        <View
            android:id="@+id/view5"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/login_btn_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/sticky_note_color_512"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toTopOf="@+id/view5" />

        <TextView
            android:id="@+id/single_note_titleId"
            style="@style/colorMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:text="@string/note_title"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintEnd_toStartOf="@+id/SingleNotedeleteBtnId"
            app:layout_constraintStart_toEndOf="@+id/view5"
            app:layout_constraintTop_toTopOf="@+id/view5"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/notice_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_date"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/single_note_titleId"
            app:layout_constraintTop_toBottomOf="@+id/single_note_titleId" />

        <View
            android:id="@+id/SingleNotedeleteBtnId"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/red_circle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/notice_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/single_note_titleId" />

        <ImageView
            android:id="@+id/deleteIconBtnId"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:contentDescription="@string/delete_icon_dsc"
            android:src="@drawable/delete_white_512"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/SingleNotedeleteBtnId"
            app:layout_constraintEnd_toEndOf="@+id/SingleNotedeleteBtnId"
            app:layout_constraintStart_toEndOf="@+id/single_note_titleId"
            app:layout_constraintTop_toTopOf="@+id/SingleNotedeleteBtnId" />

        <TextView
            android:id="@+id/expandableContentId"
            style="@style/colorMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/exo2"
            android:text="@string/demo_content"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notice_date" />

        <TextView
            android:id="@+id/single_note_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/notice_by"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expandableContentId" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

